exports[`BpkHorizontalNav should render correctly 1`] = `
<div
  className="bpk-mobile-scroll-container bpk-horizontal-nav"
  style={
    Object {
      "height": "auto",
    }
  }>
  <div
    className="bpk-mobile-scroll-container__scroller"
    onScroll={[Function]}>
    <nav
      className="bpk-mobile-scroll-container__inner">
      <ul
        className="bpk-horizontal-nav__list">
        My nav content.
      </ul>
    </nav>
  </div>
</div>
`;

exports[`BpkHorizontalNav should render correctly with arbitrary props 1`] = `
<div
  className="bpk-mobile-scroll-container bpk-horizontal-nav"
  data-arbitrary-1="arbirary-value-1"
  data-arbitrary-2="arbirary-value-2"
  style={
    Object {
      "height": "auto",
    }
  }>
  <div
    className="bpk-mobile-scroll-container__scroller"
    onScroll={[Function]}>
    <nav
      className="bpk-mobile-scroll-container__inner">
      <ul
        className="bpk-horizontal-nav__list">
        My nav content.
      </ul>
    </nav>
  </div>
</div>
`;

exports[`BpkHorizontalNav should render correctly with custom "className" prop 1`] = `
<div
  className="bpk-mobile-scroll-container bpk-horizontal-nav my-custom-class-name"
  style={
    Object {
      "height": "auto",
    }
  }>
  <div
    className="bpk-mobile-scroll-container__scroller"
    onScroll={[Function]}>
    <nav
      className="bpk-mobile-scroll-container__inner">
      <ul
        className="bpk-horizontal-nav__list">
        My nav content.
      </ul>
    </nav>
  </div>
</div>
`;
